--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -138,7 +138,7 @@
             <div class="col-md-6">
               <div class="card h-100">
                 <div class="card-header bg-dark text-white">
-                  <h2 class="card-title mb-0">Web Applications Development Gallery</h2>
+                  <h2 class="card-title mb-0">Web Development Gallery</h2>
                 </div>
                 <div class="card-body">
                   <div id="webDevCarousel" class="carousel slide" data-bs-ride="carousel">
