--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -213,6 +213,7 @@
   <footer class="bg-dark text-white text-center py-3">
     <div class="container">
       <p>&copy; 2023 lanzyTECH. All rights reserved.</p>
+      <p>{{ visitor_count }} visited.</p>
     </div>
   </footer>
 
