--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -136,15 +136,6 @@
                       <div class="carousel-item">
                         <img src="static/img/comtech/comtech3.jpg" class="d-block w-100" alt="Computer Technician 3">
                       </div>
-                        <div class="carousel-item">
-                        <img src="static/img/comtech/comtech4.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                        <div class="carousel-item">
-                        <img src="static/img/comtech/comtech5.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                        <div class="carousel-item">
-                        <img src="static/img/comtech/comtech6.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#compTechCarousel" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -213,7 +204,7 @@
   <footer class="bg-dark text-white text-center py-3">
     <div class="container">
       <p>&copy; 2023 lanzyTECH. All rights reserved.</p>
-      <p>{{ visitor_count }} visited.</p>
+      <p>{{ request.session.visitor_count }} visited.</p>
     </div>
   </footer>
 
