--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Development & Computer Repair Services</title>
+  <title>lanzytech | Web Dev | Computer Repair Services</title>
   <link rel="icon" type="image/x-icon" href="static\img\lanzytech.png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
