--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -137,6 +137,15 @@
                       <div class="carousel-item">
                         <img src="static/img/comtech/comtech3.jpg" class="d-block w-100" alt="Computer Technician 3">
                       </div>
+                      <div class="carousel-item">
+                        <img src="static/img/comtech/comtech4.jpg" class="d-block w-100" alt="Computer Technician 3">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/comtech/comtech5.jpg" class="d-block w-100" alt="Computer Technician 3">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/comtech/comtech6.jpg" class="d-block w-100" alt="Computer Technician 3">
+                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#compTechCarousel" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
