--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -90,4 +90,67 @@
   .contact-link:hover {
     color: #0056b3;
   }
+  /* Custom CSS styles for the header */
+header {
+  background-color: #333;
+  padding: 10px 0;
+}
+
+.navbar-brand img {
+  height: 60px;
+  transition: transform 0.3s ease;
+}
+
+.navbar-brand img:hover {
+  transform: scale(1.1);
+}
+
+.navbar-toggler {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+.navbar-toggler-icon {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><path stroke="rgba(255, 255, 255, 0.8)" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/></svg>');
+}
+
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+  transform: rotate(90deg);
+}
+
+.navbar-nav .nav-link {
+  color: #fff;
+  font-size: 18px;
+  margin-left: 20px;
+  transition: color 0.3s ease;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #aaa;
+}
+
+@media (max-width: 767px) {
+  .navbar-nav {
+    background-color: #222;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+  }
   
+  .navbar-nav .nav-link {
+    margin-left: 0;
+    display: block;
+    padding: 5px 0;
+    text-align: center;
+    border-bottom: 1px solid #444;
+  }
+  
+  .navbar-nav .nav-link:last-child {
+    border-bottom: none;
+  }
+  
+  .navbar-toggler {
+    margin-right: 10px;
+  }
+}
