--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -15,7 +15,7 @@
 
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg neumorphic">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="static\img\lanzytech.png" alt="lanzyTECH" height="80px">
@@ -40,6 +40,7 @@
     </div>
   </nav>
 </header>
+
 
 
   <main>
