--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url("static/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 /* Add your custom CSS styles here */
 .card {
