--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -11,7 +11,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<style>
+  body {
+  background-image: url("static/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+</style>
+
 </head>
+  
 
 <body>
 <header>
