--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -211,10 +211,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2 class="mb-4">About Me</h2>
-            <p>Hello! My name is Gerlan Dorona and I am a passionate web developer and computer repair technician. I have a strong background in Python Django and extensive experience in creating modern and responsive websites.</p>
-            <p>I believe in the power of technology to transform businesses and improve lives. With my skills and expertise, I strive to provide high-quality web development solutions that meet the unique needs of my clients.</p>
-            <p>In addition to web development, I have a deep understanding of computer hardware and software, allowing me to offer comprehensive computer repair and troubleshooting services. I can help diagnose and resolve various issues, ensuring that your computer runs smoothly and efficiently.</p>
+            <h2 class="mb-4 text-white">About Me</h2>
+            <p class="text-white">Hello! My name is Gerlan Dorona and I am a passionate web developer and computer repair technician. I have a strong background in Python Django and extensive experience in creating modern and responsive websites.</p>
+            <p class="text-white">I believe in the power of technology to transform businesses and improve lives. With my skills and expertise, I strive to provide high-quality web development solutions that meet the unique needs of my clients.</p>
+            <p class="text-white">In addition to web development, I have a deep understanding of computer hardware and software, allowing me to offer comprehensive computer repair and troubleshooting services. I can help diagnose and resolve various issues, ensuring that your computer runs smoothly and efficiently.</p>
           </div>
           <div class="col-md-6">
             <img src="static/img/about/me.jpg" class="img-fluid rounded-circle" alt="About Me">
