--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -101,81 +101,82 @@
           </div>
         </div>
       </div>
-      <section id="services" class="py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="card h-100">
-                <div class="card-header bg-dark text-white">
-                  <h2 class="card-title mb-0">Web Development Gallery</h2>
+<section id="services" class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card h-100 neumorphic">
+          <div class="card-header bg-primary text-white">
+            <h2 class="card-title mb-0">Web Development Gallery</h2>
+          </div>
+          <div class="card-body">
+            <div id="webDevCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="static/img/webtech/web1.jpg" class="d-block w-100" alt="Web Development 1">
                 </div>
-                <div class="card-body">
-                  <div id="webDevCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="static/img/webtech/web1.jpg" class="d-block w-100" alt="Web Development 1">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/webtech/web2.jpg" class="d-block w-100" alt="Web Development 2">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/webtech/web3.jpg" class="d-block w-100" alt="Web Development 3">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#webDevCarousel" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#webDevCarousel" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+                <div class="carousel-item">
+                  <img src="static/img/webtech/web2.jpg" class="d-block w-100" alt="Web Development 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/webtech/web3.jpg" class="d-block w-100" alt="Web Development 3">
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card h-100">
-                <div class="card-header bg-dark text-white">
-                  <h2 class="card-title mb-0">Computer Repair Gallery</h2>
-                </div>
-                <div class="card-body">
-                  <div id="compTechCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="static/img/comtech/comtech1.jpg" class="d-block w-100" alt="Computer Technician 1">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/comtech/comtech2.jpg" class="d-block w-100" alt="Computer Technician 2">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/comtech/comtech3.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/comtech/comtech4.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/comtech/comtech5.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/img/comtech/comtech6.jpg" class="d-block w-100" alt="Computer Technician 3">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#compTechCarousel" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#compTechCarousel" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                </div>
-              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#webDevCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#webDevCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100 neumorphic">
+          <div class="card-header bg-primary text-white">
+            <h2 class="card-title mb-0">Computer Repair Gallery</h2>
+          </div>
+          <div class="card-body">
+            <div id="compTechCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="static/img/comtech/comtech1.jpg" class="d-block w-100" alt="Computer Technician 1">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/comtech/comtech2.jpg" class="d-block w-100" alt="Computer Technician 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/comtech/comtech3.jpg" class="d-block w-100" alt="Computer Technician 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/comtech/comtech4.jpg" class="d-block w-100" alt="Computer Technician 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/comtech/comtech5.jpg" class="d-block w-100" alt="Computer Technician 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="static/img/comtech/comtech6.jpg" class="d-block w-100" alt="Computer Technician 3">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#compTechCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#compTechCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
       
             
       <section id="contact" class="bg-light py-5">
