--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -98,7 +98,7 @@ body {
   /* Custom CSS styles for the header */
 /* Custom CSS styles for the header */
 header {
-  background-color: #00fcf5;
+  background-color: 3300ff;
   padding: 10px 0;
 }
 
