--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -226,9 +226,9 @@
     
   </main>
 
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="bg-primary text-white text-center py-3">
     <div class="container">
-      <p>&copy; 2023 lanzyTECH. All rights reserved.</p>
+      <p class="text-white">&copy; 2023 lanzyTECH. All rights reserved.</p>
     </div>
   </footer>
 
