--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <style>
   body {
-  background-image: url("static/img/bg2.jpg");
+  background-image: url("static/img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
