--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -180,31 +180,31 @@
       
             
       <section id="contact" class="bg-light py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 mx-auto">
-              <div class="card neumorphic contact-card">
-                <div class="card-body">
-                  <h2 class="card-title text-center mb-4">Contact Me</h2>
-                  <div class="contact-info">
-                    <div class="contact-item">
-                      <img src="static\img\icons\call.svg" alt="Contact Icon" height="24px">
-                      <span class="contact-label">Mobile:</span>
-                      <a href="tel:09456922740" class="contact-link">0945-6922-740</a>
-                    </div>
-                    <div class="contact-item">
-                      <img src="static\img\icons\fb.svg" alt="Facebook Icon" height="24px">
-                      <span class="contact-label">Facebook:</span>
-                      <a href="https://facebook.com/lanzgerlan" target="_blank" class="contact-link">facebook.com/lanzgerlan</a>
-                    </div>
-                  </div>
-                </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="card neumorphic contact-card">
+          <div class="card-body">
+            <h2 class="card-title text-center mb-4">Contact Me</h2>
+            <div class="contact-info">
+              <div class="contact-item">
+                <img src="static/img/icons/call.svg" alt="Contact Icon" height="24px" class="contact-icon">
+                <span class="contact-label">Mobile:</span>
+                <a href="tel:09456922740" class="contact-link">0945-6922-740</a>
+              </div>
+              <div class="contact-item">
+                <img src="static/img/icons/fb.svg" alt="Facebook Icon" height="24px" class="contact-icon">
+                <span class="contact-label">Facebook:</span>
+                <a href="https://facebook.com/lanzgerlan" target="_blank" class="contact-link">facebook.com/lanzgerlan</a>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      
+      </div>
+    </div>
+  </div>
+</section>
+
       
       
     
