--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -183,7 +183,7 @@
       <div class="col-md-6 mx-auto">
         <div class="card neumorphic contact-card">
           <div class="card-body">
-            <h2 class="card-title text-center mb-4">Contact Me</h2>
+            <h2 class="card-title mb-0">Contact Me</h2>
             <div class="contact-info">
               <div class="contact-item">
                 <img src="static/img/icons/call.svg" alt="Contact Icon" height="24px" class="contact-icon">
