--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -54,14 +54,8 @@ body {
   border-radius: 50%;
   background-color: #6c757d;
 }
+
 .contact-card {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-  }
-  
- .contact-card {
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -108,10 +102,9 @@ body {
   color: #007bff;
 }
 
-  /* Custom CSS styles for the header */
 /* Custom CSS styles for the header */
 header {
-  background-color: 3300ff;
+  background-color: #3300ff;
   padding: 10px 0;
 }
 
@@ -180,6 +173,8 @@ header {
   .navbar-toggler {
     margin-right: 10px;
   }
+}
+
 .neumorphic {
   background-color: #ffffff;
   border-radius: 10px;
@@ -242,5 +237,3 @@ header {
   object-fit: cover;
   border-radius: 10px;
 }
-
-
