--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -173,7 +173,7 @@
   </div>
 </section>
 
-<section id="contact" class="bg-light py-5">
+<section id="contact"py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
