--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -1,29 +1,25 @@
 body {
-  background-color: #3300ff;
-  padding: 20px;
+  background-image: url("static/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.card,
-.skeuomorphic,
-.contact-card,
-.header {
-  background-color: #f0f0f0;
+.card {
+  background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.1), -8px -8px 16px rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
 
-.card:hover,
-.skeuomorphic:hover,
-.contact-card:hover,
-.header:hover {
+.card:hover {
   transform: scale(1.05);
 }
 
-.card-header,
-.card-title {
-  font-size: 24px;
-  padding: 15px;
+.skeuomorphic {
+  background-color: #f0f0f0;
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 .skeuomorphic h2 {
@@ -36,6 +32,17 @@ body {
   margin-bottom: 20px;
 }
 
+.skeuomorphic ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.skeuomorphic ul li {
+  padding-left: 20px;
+  position: relative;
+  margin-bottom: 10px;
+}
+
 .skeuomorphic ul li:before {
   content: "";
   position: absolute;
@@ -45,6 +52,22 @@ body {
   height: 8px;
   border-radius: 50%;
   background-color: #6c757d;
+}
+
+.contact-card {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.contact-card:hover {
+  transform: scale(1.05);
+}
+
+.card-title {
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .contact-info {
@@ -78,9 +101,16 @@ body {
   color: #007bff;
 }
 
-.header {
+header {
   background-color: #3300ff;
   padding: 10px 0;
+}
+
+.neumorphic {
+  background-color: #999999;
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.1), -8px -8px 16px rgba(255, 255, 255, 0.8);
 }
 
 .navbar-brand img {
@@ -143,13 +173,12 @@ body {
   }
 }
 
-/* Additional custom styles for a neumorphic look */
+/* Additional custom styles for a more appealing look */
 
 .neumorphic {
-  background-color: #f0f0f0;
-  border: none;
+  background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1), -10px -10px 20px rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
 
@@ -157,13 +186,18 @@ body {
   transform: scale(1.05);
 }
 
+.card-header {
+  font-size: 24px;
+  padding: 15px;
+}
+
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  border: 1px solid #dcdcdc;
+  border: 1px solid #dddddd;
 }
 
 .carousel-control-prev,
