--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -6,19 +6,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>lanzytech | Web Dev | Computer Repair Services</title>
+  <meta name="description" content="Welcome to lanzytech! We provide web development and computer repair services.">
+  <meta name="keywords" content="lanzytech, web development, computer repair services">
   <link rel="icon" type="image/x-icon" href="static\img\lanzytech.png">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-<style>
-  body {
-  background-image: url("static/img/background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
-</head> 
+
+  <style>
+    body {
+      background-image: url("static/img/background.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
+</head>
+
 <body>
 <header>
   <nav class="navbar navbar-expand-lg neumorphic">
