--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -106,7 +106,9 @@
           </div>
         </div>
       </div>
-<section id="services" class="py-5">
+</section>
+
+<section id="services-gallery" class="py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
